# git_action_test

./: .gitignore  index.html  pyproject.toml
.github/workflows/: python-test.yml
docs/: index.md
search/: search_index.json
tests/: test_main.py
